--- a/index.html
+++ b/index.html
@@ -1,44 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculator</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+<meta charset="UTF-8">
+<title>Dom Selection</title>
+<style>
+    * { 
+        border: 2px solid #dedede; 
+        padding: 15px; 
+        margin: 15px; 
+    }
+    html { 
+    margin: 0;
+    padding: 0;
+    }
+    body { 
+    max-width: 600px;
+    margin: 30px auto;
+    font-family: sans-serif;
+    color: #333;
+    }
+</style>
 </head>
 <body>
-    <!-- <div class="main"> -->
-    <div class="value"></div>
-    <div class="result"></div>
-    <div class="container">
-        <!-- <div id="display">11x</div> -->
-        <div class="number">
-            <button>1</button>
-            <button>2</button>
-            <button>3</button>
-            <button>4</button>
-            <button>5</button>
-            <button>6</button>
-            <button>7</button>
-            <button>8</button>
-            <button>9</button>
-            <button>(</button>
-            <button >0</button>
-            <button >)</button>
-        </div>
-        <div class="operrator">
-            <button>C</button>
-            <button>del</button>
-            <button>+</button>
-            <button>-</button>
-            <button>/</button>
-            <button>*</button>
-            <button>=</button>
-            <!-- <button>=</button> -->
-        </div>
-    <!-- </div> -->
-    <script src="script.js"></script>
+
+<h1 id="judul">Hello World</h1>
+<div id="container">
+<section id="a">
+    <p class="p1">paragraf 1</p>
+    <a href="http://instagram.com/bi_jhoo">My IG Abizarah</a>
+    <p class="p2">paragraf 2</p>
+    <p class="p3">paragraf 3</p>
+</section>
+<section id="b">
+    <p>paragraf 4</p>
+    <ul>
+        <li>item 1</li>
+        <li>item 2</li>
+        <li>item 3</li>
+    </ul>
+</section>
+</div>
+
+<script src="script.js"></script>
 </body>
 </html>
